<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#1d1e1f"
    app:cardElevation="12dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="12dp">
        <TextView
            android:id="@+id/sansserif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="Sans Serif"
            android:textSize="24sp"
            android:textColor="@color/cardtxt"
            android:text="@string/sans_serif"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:padding="10dp"
            android:text="@string/inter"
            android:textColor="@color/cardtxt"
            android:textSize="24sp"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/lexendDeca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_deca"
            android:padding="10dp"
            android:text="@string/lexend_deca"
            android:textColor="@color/cardtxt"
            android:textSize="24sp"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_mono"
            android:padding="10dp"
            android:text="@string/monospace"
            android:textColor="@color/cardtxt"
            android:textSize="25sp"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/open_dyslexic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_dyslexic3"
            android:padding="10dp"
            android:text="@string/open_dyslexic"
            android:textColor="@color/cardtxt"
            android:textSize="20sp"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/posidonsans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/posidon_sans"
            android:textSize="24sp"
            android:textColor="@color/cardtxt"
            android:text="@string/posidon_sans"
            android:includeFontPadding="false"/>
        <TextView
            android:id="@+id/ubuntu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="10dp"
            android:text="@string/ubuntu"
            android:textColor="@color/cardtxt"
            android:textSize="24sp"
            android:includeFontPadding="false"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>