<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/settings">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="64dp"
        android:requiresFadingEdge="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:gravity="center"
                android:text="@string/settings_title_dock"
                android:textColor="#ffffff"
                android:textSize="32sp"/>
            <LinearLayout
                style="@style/settingscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <posidon.launcher.view.setting.NumberBarSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/columns"
                    app:key="dock:columns"
                    app:def="5"
                    app:max="7"
                    app:startsWith1="true"/>
                <posidon.launcher.view.setting.NumberBarSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/settings_rows"
                    app:key="dock:rows"
                    app:def="1"
                    app:max="5"
                    app:startsWith1="true"/>
                <LinearLayout
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/settingsbtn"
                        android:layout_width="wrap_content"
                        android:drawableStart="@drawable/ic_apps"
                        android:text="@string/iconSize" />
                    <posidon.launcher.view.Seekbar
                        android:id="@+id/dockiconsizeslider"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:max="2"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/settingscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <posidon.launcher.view.setting.ColorSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_color"
                    app:label="@string/background"
                    app:key="dock:background_color"
                    app:def="#88000000"/>
                <posidon.launcher.view.setting.SpinnerSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_apps"
                    app:label="@string/background_type"
                    app:key="dock:background_type"
                    app:def="0"
                    app:array="@array/bgModes"/>
                <posidon.launcher.view.setting.NumberBarSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/radius"
                    app:key="dockradius"
                    app:def="30"
                    app:max="50"/>
                <posidon.launcher.view.setting.NumberBarSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/bottom_padding"
                    app:key="dockbottompadding"
                    app:def="10"
                    app:max="30"/>
                <posidon.launcher.view.setting.NumberBarSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/horizontal_margin"
                    app:key="dock:margin_x"
                    app:def="16"
                    app:max="32"/>
            </LinearLayout>
            <LinearLayout
                style="@style/settingscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <posidon.launcher.view.setting.HeaderSwitchSettingView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:layout_marginBottom="12dp"
                    app:label="@string/appLabels"
                    app:key="dockLabelsEnabled"
                    app:def="false"/>
                <posidon.launcher.view.setting.SwitchSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_arrow_right"
                    app:label="@string/marquee"
                    app:key="dock:labels:marquee"
                    app:def="true"/>
                <posidon.launcher.view.setting.ColorSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_color"
                    app:label="@string/labelColor"
                    app:key="dockLabelColor"
                    app:def="#EEEEEEEE"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>