<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/settings">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="64dp"
        android:requiresFadingEdge="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:gravity="center"
                android:text="@string/settings_title_news"
                android:textColor="#ffffff"
                android:textSize="32sp"/>
            <LinearLayout
                style="@style/settingscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/settingsbtn"
                        android:layout_width="match_parent"
                        android:drawableStart="@drawable/ic_label"
                        android:text="@string/feed_sources"
                        android:onClick="chooseFeeds"/>
                </LinearLayout>
                <posidon.launcher.view.setting.SwitchSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_apps"
                    app:label="@string/show_feed_spinner"
                    app:key="feed:show_spinner"
                    app:def="true"/>
                <LinearLayout
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/settingsbtn"
                        android:layout_width="0dp"
                        android:drawableStart="@drawable/ic_apps"
                        android:layout_weight="1"
                        android:text="@string/read_method"/>
                    <posidon.launcher.view.Spinner
                        style="@style/settingsbtn"
                        android:id="@+id/readMethods"
                        android:layout_width="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/settingscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <posidon.launcher.view.setting.HeaderSwitchSettingView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:layout_marginBottom="12dp"
                    app:label="@string/cards"
                    app:key="feed:enabled"
                    app:def="true"/>
                <LinearLayout
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/settingsbtn"
                        android:layout_width="match_parent"
                        android:drawableStart="@drawable/ic_apps"
                        android:text="@string/layout"
                        android:onClick="chooseLayouts"/>
                </LinearLayout>
                <posidon.launcher.view.setting.SwitchSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_visible"
                    app:label="@string/setting_hide_until_user_scrolls"
                    app:key="hidefeed"
                    app:def="false"/>
                <posidon.launcher.view.setting.ColorSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_color"
                    app:label="@string/background"
                    app:key="feed:card_bg"
                    app:def="#FF252627"/>
                <posidon.launcher.view.setting.ColorSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_color"
                    app:label="@string/text_color"
                    app:key="feed:card_txt_color"
                    app:def="#FFFFFFFF"/>
                <posidon.launcher.view.setting.SwitchSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_label"
                    app:label="@string/text_shadow"
                    app:key="feed:card_text_shadow"
                    app:def="true"/>
                <posidon.launcher.view.setting.SwitchSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_image"
                    app:label="@string/images"
                    app:key="feed:card_img_enabled"
                    app:def="true"/>
                <LinearLayout
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/newsCardMaxImageWidthNum"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/cardtxticon"/>
                    <TextView
                        style="@style/settingsbtn"
                        android:layout_width="wrap_content"
                        android:text="@string/max_image_width" />
                    <posidon.launcher.view.Seekbar
                        android:id="@+id/newsCardMaxImageWidthSlider"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:max="50" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/settingscard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <posidon.launcher.view.setting.HeaderSwitchSettingView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:layout_marginBottom="12dp"
                    app:label="@string/swipe_to_remove"
                    app:key="feed:delete_articles"
                    app:def="false"/>
                <posidon.launcher.view.setting.ColorSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_color"
                    app:label="@string/swipe_bg_color"
                    app:key="feed:card_swipe_bg_color"
                    app:def="#880d0e0f"/>
                <posidon.launcher.view.setting.SwitchSettingView
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawable="@drawable/ic_apps"
                    app:label="@string/undo_popup"
                    app:key="feed:undo_article_removal_opt"
                    app:def="false"/>
                <LinearLayout
                    style="@style/settingsEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/settingsbtn"
                        android:layout_width="match_parent"
                        android:drawableStart="@drawable/ic_visible"
                        android:text="@string/removed"
                        android:onClick="seeRemovedArticles"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>