<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">
    <LinearLayout
        android:id="@+id/icshapedef"
        android:onClick="icshapedef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            style="@style/settingsbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/default_icon_theme"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/icshaperound"
        android:onClick="icshaperound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp">
        <TextView
            style="@style/settingsbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/circle"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/icshaperoundrect"
        android:onClick="icshaperoundrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp">
        <TextView
            style="@style/settingsbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rounded_square"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/icshaperect"
        android:onClick="icshaperect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp">
        <TextView
            style="@style/settingsbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/square"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/icshapesquircle"
        android:onClick="icshapesquircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp">
        <TextView
            style="@style/settingsbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/squircle"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>